--- a/identity_elements.html
+++ b/identity_elements.html
@@ -1,9 +1,9 @@
 <html>
 	<head>
-		<title>National Identity Elements</title>
+		<title>Profile</title>
 		<style type="text/css">
 			body{
-				background:#fafad2 url('') no-repeat fixed;
+				background:#fff url('') no-repeat fixed;
 				margin:0;
 			}
 			#toplogo{
@@ -13,14 +13,14 @@
 				background-size:cover;
 				position:fixed;
 				top:0;
-				left:250px;
+				left:180px;
 				z-index:2000;
 				box-shadow: 1px -1px 5px 5px rgba(128,128,128,0.75);
 			}
 			#mainarea{
 				width:1200px;
 				height:1400px;
-				background:pink;
+				background:#fff;
 				margin:0 auto;
 			}
 			#toparea{
@@ -61,24 +61,104 @@
 				height:340px;
 				background:white url('bg.jpg') fixed no-repeat;
 			}
-			#darea{
-				width:1200px;
-				height:500px;
-				background:white url('backgrounds/.jpeg') repeat;
+			#darea1{
+				width:1000px;
+				height:39px;
+				background:#fff;
+				margin:0px 100px;
+				text-align:center;
+				border-bottom:solid 1px #000;
+			}
+			#darea1 p{
+				margin:0;
+				padding:10px 0;
+			}
+			#darea1 a:link,#darea1 a:visited{
+				text-decoration:none;
+				color:#000;
+			}
+			#darea1 a:hover{
+				text-decoration:underline;
+			}
+			#darea2{
+				width:1000px;
+				height:800px;
+				background:#fff url('backgrounds/.jpeg') repeat;
+				margin:0px 100px;
 
 			}
-			#darea h1{
+			#darea2 h1{
 				margin:0;
+				font-family:cursive;
 				text-align:center;
-				color:maroon;
+				color:#D42755;
 				padding:20px 0px;
 			}
-			#darea p{
+			#darea2 p{
 				text-align:justify;
-				color:maroon;
-				padding:0 40px;
-				text-indent:20px;
+				color:#000;
+				padding:0 20px;
+				text-indent:0px;
 			}
+			#clogoarea{
+				width:1000px;
+				height:30px;
+				background:#fff;
+				border-top:2px solid #A0BB2D;
+			}
+			#clogo{
+				width:60px;
+				height:60px;
+				background:lightgreen url('logo1.png') no-repeat;
+				background-size:cover;
+				margin:-30px 470px;
+				float:left;
+				border-radius:50%;
+			}
+			#chead{
+				width:1000px;
+				height:50px;
+				background:white;
+				font-family:arial;
+				padding-top:20px;
+			}
+			#chead h2{
+				margin:0;
+				font-family:;
+				color:#000;
+				text-align:center;
+			}
+			#elements1{
+				width:1000px;
+				height:200px;
+				background:green;
+			}	
+			#e1{
+				width:250px;
+				height:200px;
+				background:pink;
+				float:left;
+			}
+			#e11{
+				width:100px;
+				height:100px;
+				background:gold;
+				border-radius:50%;
+				margin:25px 75px;			
+			}
+			#e12{
+				width:250px;
+				height:50px;
+				background:blue;		
+			}
+			.chover{
+				border:solid 2px #fafad2;
+			}
+			#elements2{
+				width:1000px;
+				height:200px;
+				background:lightgreen;
+			}	
 			#footerarea{
 				width:1200px;
 				height:500px;
@@ -87,18 +167,25 @@
 			
 			}
 			#f1{
-				width:600px;
+				width:1200px;
+				height:300px;
+				background:;
+			}
+			#f11{
+				width:650px;
 				height:250px;
 				background:;
 				float:left;
-				margin:50px 100px;
+				margin:50px 50px 0px 100px;
+				text-align:center;
 			}
-			#f1 h1{
+			#f11 h1{
+				margin:0;
 				text-align:center;
 				color:#fff;
 				font-family:cursive;
 			}
-			#f1 hr{
+			#f11 hr{
 				width:300px;
 				height:1px;
 				background:#fff;
@@ -106,10 +193,111 @@
 			#f1 p{
 				text-align:justify;
 				color:#fff;
-				padding:0px 20px;
+				padding:0px 20px 10px 20px;
 			}
+			#f11 a:link,#f11 a:visited{
+				color:#fff;
+				text-decoration:none;
+				padding:5px 15px;
+				border-radius:20px;
+				border:solid 1px #fff;
+			}
+			#f11 a:hover{
+				color:#000;
+				border:solid 1px #000;
+			}
+			#f12{
+				width:350px;
+				height:250px;
+				background:;
+				float:left;
+				margin:50px 50px 0px 0px;
+				text-align:center;
+			}
+			#f12 h1{
+				margin:0;
+				text-align:center;
+				color:#fff;
+				font-family:cursive;
+			}
+			#f12 hr{
+				width:200px;
+				height:1px;
+				background:#fff;
+			}
+			#f121{
+				width:50px;
+				height:50px;
+				color:#fff;
+				background:;
+				float:left;	
+				margin-left:70px;	
+				text-align:center;
+				margin-top:20px;
+				border-radius:100%;
+				border:solid 1px #fff;			
+			}
+			#f121:hover{
+				color:#000;
+				border:solid 1px #000;
+			}
+			#f2{
+				width:1200px;
+				height:200px;
+				background:;
+			}
+			#f21{
+				width:650px;
+				height:200px;
+				background:;
+				float:left;
+				margin:0px 50px 0px 100px;
+			}
+			#f221{
+				width:650px;
+				height:30px;
+				background:;
+				float:left;
+				margin:150px 0px 0px 0px;
+			}
+			#f221 ul{
+				list-style:none;
+				margin:0;
+				padding:0;
+			}
+			#f221 ul li{
+				float:left;
+				border-right:solid 1px #fff;
+			}
+			#f221 ul li:last-child{
+				border:none;
+			}
+			#f221 ul li a:link,#f221 ul li a:visited{
+				text-decoration:none;
+				color:#fff;
+				background:;
+				padding:0px 10px;
+				display:block;
+			}
+			#f221 ul li a:hover{
+				color:#D42755;
+			}
+			#f22{
+				width:350px;
+				height:200px;
+				background:;
+				float:left;
+				margin:0px 50px 0px 0px;
+				position:relative;
+			}
+			#f22 img{
+				position:absolute;
+				bottom:20;
+				left:100;				
+			}			
 
 		</style>
+		<link rel="stylesheet" href="css/font-awesome.css" type="text/css"/>
 	</head>
 	<body>
 		<div id="mainarea">
@@ -130,20 +318,130 @@
 			</div>
 			<div id="slidearea">
 			</div>
-			<div id="darea">
+			<div id="darea1">
+				<p>
+					<i class="fa fa-home"></i>
+					<a href="index.html">Home</a>
+					 &gt;&gt;
+					National Identity Elements
+				</p>
+			</div>
+			<div id="darea2">
 				<h1>National Identity Elements</h1>
 				<p>
+					This section introduces you to the National Identity Elements. These symbols are intrinsic to the Indian identity and heritage.
 				</p>
+
+				<p>
+					Indians of all demographics backgrounds across the world are proud of these National Symbols as they infuse a sense of pride and patriotism in every Indian's heart.
+				</p>
+				<br/><br/>
+				<div id="clogoarea">
+					<div id="clogo">
+					</div>
+				</div>
+				<div id="chead">
+					<h2>National Identity Elements</h2>
+				</div>
+				<div id="elements1">
+					<div id="e1">
+						<div id="e11">
+						</div>
+						<div id="e12">
+						</div>
+					</div>
+					<div id="e1">
+						<div id="e11">
+						</div>
+						<div id="e12">
+						</div>
+					</div>
+					<div id="e1">
+						<div id="e11">
+						</div>
+						<div id="e12">
+						</div>
+					</div>
+					<div id="e1">
+						<div id="e11">
+						</div>
+						<div id="e12">
+						</div>
+					</div>
+				</div>
+				<div id="elements2">
+					<div id="e1">
+						<div id="e11">
+						</div>
+						<div id="e12">
+						</div>
+					</div>
+					<div id="e1">
+						<div id="e11">
+						</div>
+						<div id="e12">
+						</div>
+					</div>
+					<div id="e1">
+						<div id="e11">
+						</div>
+						<div id="e12">
+						</div>
+					</div>
+					<div id="e1">
+						<div id="e11">
+						</div>
+						<div id="e12">
+						</div>
+					</div>
+				</div>
 			</div>
 			<div id="footerarea">
 				<div id="f1">
-					<h1>About India</h1>
-					<hr/>
-					<p>
-						India is one of the oldest civilizations in the world with a kaleidoscopic variety and rich cultural heritage. It has achieved all-round socio-economic progress since Independence. As the 7th largest country in the world, India stands apart from the rest of Asia, marked off as it is by mountains and the sea, which give the country a distinct geographical entity. Bounded by the Great Himalayas in the north, it stretches southwards and at the Tropic of Cancer, tapers off into the Indian Ocean between the Bay of Bengal on the east and the Arabian Sea on the west.
-					</p>
+					<div id="f11">
+						<h1>About India</h1>
+						<hr/>
+						<p>
+							India is one of the oldest civilizations in the world with a kaleidoscopic variety and rich cultural heritage. It has achieved all-round socio-economic progress since Independence. As the 7th largest country in the world, India stands apart from the rest of Asia, marked off as it is by mountains and the sea, which give the country a distinct geographical entity. Bounded by the Great Himalayas in the north, it stretches southwards and at the Tropic of Cancer, tapers off into the Indian Ocean between the Bay of Bengal on the east and the Arabian Sea on the west.
+						</p>
+						<a href="profile.html">
+							Explore
+						</a>
+					</div>
+					<div id="f12">
+						<h1>Follow us</h1>
+						<hr/>
+						<a href="https://www.facebook.com/KnowIndiaPortal" target="_blank">
+							<div id="f121">
+								<i class="fa fa-facebook"></i>
+							</div>
+						</a>
+						<a href="https://twitter.com/i/flow/login?redirect_after_login=%2Fknowindiaportal" target="_blank">
+							<div id="f121">
+								<i class="fa fa-twitter"></i>
+							</div>
+						</a>
+					</div>
 				</div>
-			</div>
+				<div id="f2">
+					<div id="f21">
+						<div id="f221">
+							<ul>
+								<li><a href="index.html">Home</a></li>
+								<li><a href="index.html">Help</a></li>
+								<li><a href="index.html">Add a Favorites</a></li>
+								<li><a href="index.html">Terms of Use</a></li>
+								<li><a href="index.html">Accessibility Statement</a></li>
+								<li><a href="index.html">Contact Us</a></li>
+							</ul>
+						</div>
+					</div>
+					<div id="f22">
+						<a href="https://www.india.gov.in/" title="Redirects to the India's Official Website" target="_blank">
+							<img src="gov_logo.png"/>
+						</a>
+					</div>
+				</div>
 		</div>
 	</body>
 </html>
